Update and rename Mergulho/css/style.css to Mergulho/CSS/style.css

--- a/Mergulho/CSS/style.css
+++ b/Mergulho/CSS/style.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 
 :root { 
-    --cor1: #;
-    --cor2: #;
-    --cor3: #;
-    --cor4: #;
-    --cor5: #; 
+    --cor1: #011627;
+    --cor2: #E71d36;
+    --cor3: #90b494;
+    --cor4: #14bdeb;
+    --cor5: #E5a4cb;
     --cor6: #000000;
     --cor7: #FFFFFF;
 }
