--- a/Mergulho/CSS/style.css
+++ b/Mergulho/CSS/style.css
@@ -4,8 +4,8 @@
     --cor1: #011627;
     --cor2: #E71d36;
     --cor3: #90b494;
-    --cor4: #14bdeb;
-    --cor5: #E5a4cb;
+    --cor4: #E5a4cb;
+    --cor5:  #14bdeb;
     --cor6: #000000;
     --cor7: #FFFFFF;
 }
@@ -25,9 +25,9 @@ main {
     width: 800px;
     margin: auto;
     border: 3px solid var(--cor1);
-    box-shadow: 13px 15px 0px var(--cor6);
+    box-shadow: 13px 15px 0px var(--cor2);
     padding: 20px 12px 15px 12px;
-    background-color: var(--cor1);
+    background-color: var(--cor5);
 }
 
 body {
@@ -36,6 +36,7 @@ body {
 }
 
 p {
+    text-align: center;
     color: var(--cor6);
     text-align: justify;
     text-indent: 25px;
@@ -95,74 +96,58 @@ audio {
 
 
 nav {
-    width: 100%;
+    width: 910px;
+    height: 28px;
+    border: 6px groove var(--cor3);
     margin: auto;
-    height: 40px; 
-    background-color: var(--cor2);
-    position: fixed;
-    border-bottom: 7px solid black;
+    margin-bottom: 15px;
+    padding: 16px;
+    background-color: var(--cor5);
+    box-shadow: 6px 6px var(--cor6);
 }
 
-nav > ul {
-    margin: auto;
-    align-content: center;
-    display: block;
-}
-
-nav > ul > li {
-    float: left; 
-    width: 250px; 
-    height: 34px;
-    text-align: center; 
-    font-size: 25px; 
-    list-style: none;
-    padding: 6px 64px 0px 65px;
-}
-
-nav > ul > li:hover {
-    background-color: var(--cor4);
-    display: block;
-}
-
-nav > ul > li:hover > a{
+.v> .menu > li {
+    background-color: var(--cor6);
     color: var(--cor7);
+    float: left;
+    width: 200px;
+    height: 30px;
+    display: inline-block;
+    text-align: center;
+    line-height: 33px;
+    font-size: 12px;
 }
-
-nav > ul > li > a {
+.v> .menu > li:hover {
+    background-color: var(--cor7);
+    font-size: 12px;
+}
+.v> .menu > li > a {
     text-decoration: none;
-    color: var(--cor5);
 }
-
-
-nav > ul > li > ul {
+.v> .menu > li > ul > li > a {
+    text-decoration: none;
+}
+.v> .menu > li > ul {
     display: none;
 }
-
-
-nav > ul > li:hover > ul {
+.v> .menu > li > ul > li {
+    background-color: var(--cor2);
+    list-style: none;
+}
+.v> .menu > li:hover {
+    background-color: var(--cor2);
+}
+.v> .menu > li > ul > li:hover {
+    background-color: var(--cor5);
+}
+.v> .menu > li:hover > ul {
     display: block;
     position: relative;
-    background-color: var(--cor2);
-    width: 381px;
-    right: 66px; 
-    top: 6px; 
 }
+.v> .menu > .topic {
+    color: var(--cor3);
+    background-color: var(--cor5);
+    font-weight: bold;
+    font-size: 15px;
 
-nav > ul > li > ul > li {
-    list-style: none;
-    padding: 4px 64px 0px 65px;
-    height: 36px;
-}
-
-nav > ul > li > ul > li > a{
-    color: var(--cor5);
-    text-decoration: none;
-}
-
-nav > ul > li > ul > li:hover {
-    background-color: var(--cor4);
-}
-
-nav > ul > li > ul > li:hover > a{
-    color: var(--cor7);
 }
